--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300;400;500;700;900&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: Montserrat;
+  font-family: 'Frank Ruhl Libre', serif;
 }
 
 a {
@@ -20,7 +22,11 @@ h4 {
   padding: 0;
 }
 
+h1 {
+  color: #652235;
+}
+
 * {
-  font-family: Montserrat;
+  font-family: 'Frank Ruhl Libre', serif;
   box-sizing: border-box;
 }
