--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,11 +4,26 @@
   align-items: center;
   justify-content: space-between;
   min-height: 100vh;
-  padding: 0px 8px;
+  padding: 0px 16px;
+}
+
+.bottomBanner{
+  height: 16px;
+  width: 100%;
+  background: #652235;
+  margin-top: -5px;
+}
+
+.ImgChurch{
+  border-radius: 16px;
+}
+
+.ImgBuffet{
+  border-radius: 16px;
 }
 
 .mapsChurch{
-  margin: 64px 0;
+  margin: 16px 0;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -17,7 +32,7 @@
 }
 
 .mapsBuffet{
-  margin: 64px 0;
+  margin: 16px 0;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -25,9 +40,15 @@
   flex-direction: column;
 }
 
+.listGifts{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .list {
-  width: 90%;
-  padding: 10px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,8 +56,7 @@
   margin-bottom: 35px;
 }
 .signedList {
-  width: 90%;
-  padding: 10px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +64,6 @@
 }
 
 .message{
-  padding: 0 35px;
   width: 100%;
 }
 
