--- a/styles/Item.module.css
+++ b/styles/Item.module.css
@@ -2,19 +2,24 @@
   display: flex;
   box-shadow: 2px 2px 5px #0002;
   padding: 15px;
-  border-radius: 20px;
   width: fit-content;
   flex-wrap: wrap;
   margin: 10px 0;
-  background: #f7f7f7;
+  color: #FFFFFF;
+
+  background: rgba(101, 34, 53, 0.5);
+  backdrop-filter: blur(9.5px);
+  -webkit-backdrop-filter: blur(9.5px);
+  border-radius: 20px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-.itemSigned{
+.itemSigned {
   display: flex;
   box-shadow: 2px 2px 5px #0002;
   padding: 15px;
   border-radius: 20px;
-  width: fit-content;
+  width: 100%;
   flex-wrap: wrap;
   margin: 10px 0;
   background: #f3e2e2;
@@ -26,7 +31,8 @@
   border: 1px solid #cecece;
   display: flex;
   width: 100%;
-  padding: 5px 10px;
+  padding: 8px 12px;
+  border-radius: 10px 0 0 10px;
 }
 
 .itemName {
@@ -34,11 +40,11 @@
   padding: 10px;
 }
 
-.itemSigned .itemName{
+.itemSigned .itemName {
   color: #652235;
 }
 
-.itemInput{
+.itemInput {
   width: 100%;
 }
 
@@ -82,10 +88,12 @@
   padding: 10px;
   border-radius: 5px;
 }
+
 .sugestion,
 .noSugestion {
   width: 100%;
 }
+
 .sugestion button {
   display: flex;
   justify-content: center;
@@ -102,9 +110,11 @@
   border-radius: 10px;
   box-shadow: 3px 3px 5px #0005;
 }
+
 .sugestion button:hover {
   box-shadow: none;
 }
+
 .noSugestion button {
   display: flex;
   justify-content: center;
@@ -120,6 +130,6 @@
   border-radius: 10px;
 }
 
-.itemSigned .sugestion button{
+.itemSigned .sugestion button {
   background: #652235;
 }
