--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,6 +7,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Frank Ruhl Libre', serif;
+  background: #f8f8f8;
 }
 
 a {
@@ -24,9 +25,16 @@ h4 {
 
 h1 {
   color: #652235;
+  font-weight: 800;
 }
 
 * {
   font-family: 'Frank Ruhl Libre', serif;
   box-sizing: border-box;
+}
+
+@media only screen and (min-width: 768px) {
+  p{
+    font-size: 16px;
+  }
 }
